Code/media/backend.css
/*----- Body -----*/
body, html
{
    margin: 0px;
    padding: 0px;
    font-family: Arial, Helvetica, sans-serif;
    background-color:floralwhite;
}

/*----- Menue -----*/
nav
{
  margin: 0;
  padding: 0;
  margin-right: 10px;
  width: 300px;
  left: 0;
  top: 0;
  height: auto;
  float: left;
  background-color:darkseagreen;
}

#logo
{
    background-image: url('Logo.svg');
    background-size: cover;
	background-repeat: no-repeat;
    background-position: center center;
    height: 160px;
}

#menue ul
{
    list-style: none;
    padding: 0px;
    margin: 0px;
    text-align: left;
}

#menue li
{
    margin: 5px;
}

#menue a
{
    display: block;
    background-color: antiquewhite;
    color: black;
    text-decoration: none;
    width: 90%;
    height: 70px;
    text-align: left;
    padding-left: 10%;
    line-height: 70px;
}

#menue a.contentEditMenue {
    width: 100%;
}

#menue a:hover
{
    text-decoration: none;
    color: #fff;
    background-color: #000;
}

/*----- Content -----*/
main
{
  display: block;
  position: absolute;
  left: 350px;
  margin: 0;
  padding: 0;
  float: left;
}

/*----- Table -----*/
table
{
    border-collapse:separate;
    width: 100%;
}

th, table.dataTable thead th.sorting_asc, table.dataTable thead th.sorting_desc, table.dataTable thead th.sorting
{
    text-align: left;
    padding:15px;
    color:#fff;
    text-shadow:1px 1px 1px #568F23;
    border:1px solid #93CE37;
    border-bottom:3px solid #9ED929;
    background-color:#9DD929;
    background:-webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0.02, rgb(123,192,67)),
        color-stop(0.51, rgb(139,198,66)),
        color-stop(0.87, rgb(158,217,41))
        );
    background: -moz-linear-gradient(
        center bottom,
        rgb(123,192,67) 2%,
        rgb(139,198,66) 51%,
        rgb(158,217,41) 87%
        );
    -webkit-border-top-left-radius:5px;
    -webkit-border-top-right-radius:5px;
    -moz-border-radius:5px 5px 0px 0px;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
}

td {
    padding:10px;
    text-align:center;
    background-color:#DEF3CA;
    border: 2px solid #E7EFE0;
    -moz-border-radius:2px;
    -webkit-border-radius:2px;
    border-radius:2px;
    color:#666;
    text-shadow:1px 1px 1px #fff;
}

/*----- Button ----->*/
input[type=button]
{
    background-color: #4CAF50;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin-right: 10px;
}

input[type=button]:hover
{
    background-color:darkgreen;
}

input[type=submit]
{
    background-color: #4CAF50;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin-right: 10px;
}

input[type=submit]:hover 
{
    background-color:darkgreen;
}

/*----- font-awesome ----->*/
.fa.fontawesome
{
    font-size: 40px;
}

/*----- Forms ----->*/
label, input 
{
  display:inline-block;
}

label 
{
    width:200px;
}
input[type=text]
{
    width:500px; 
}

/*-----  Warning ----->*/
.warning
{
  position: absolute;
  left: 350px;
  top: 500px;
}

.info
{
  text-align: center;
  background-color: #f2dede;
}

/*-----  Finetuning ----->*/
#pageSelecter
{
  height: 52px;
  margin-right: 10px;
}

input[placeholder=Username], input[placeholder=Passwort]
{
    width: 300px;
    display: block;
    margin-bottom: 10px;
}

